--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active:
   datasource:
       url: jdbc:postgresql://localhost:5432/news
       password: 1234
@@ -10,6 +12,12 @@ spring:
         format_sql: true
   data:
     redis:
+      news-live-time: 100
       host: localhost
       port: 6379
-      password: 1234
+      jedis:
+        pool:
+          enabled: true
+          max-active: 16
+          max-idle: 8
+          min-idle: 4
