--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -29,4 +29,18 @@ services:
     depends_on:
       - db
 
-
+  web-app:
+    image: "news-portal:0.1.1"
+    ports:
+      - "8080:8080"
+    environment:
+      - "SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}"
+      - "DATABASE_NAME=db"
+      - "SPRING_DATA_REDIS_NEWS_LIVE_TIME=${NEWS_LIVE_TIME}"
+      - "SPRING_DATASOURCE_USERNAME=roman"
+      - "SPRING_DATASOURCE_PASSWORD=1234"
+    networks:
+      - app-tier
+    depends_on:
+      - db
+      - redis
